# masterarbeit-analyse

./: CHANGELOG.md  README.md  pyproject.toml
.githooks/: commit-msg.ps1
.github/agents/: Professor.md
.pytest_basetemp/test_cli_parser_uses_plot_temp0/: plot_templates.toml
docs/: PLAN_STATUS.md  architecture.md  commands.md  commit_hooks.md  plot_template_examples.md
docs/plan_status/: 2026-05-26.md
src/ma_analyse/: __init__.py
src/ma_analyse/analysis/: cooling.py  heating.py
src/ma_analyse/analysis/components/: heating_year_layout.py
src/ma_analyse/analysis/templates/: __init__.py  barplots.py  catalog.py  comfort.py  energy_balance.py  heating_year.py  internal_loads.py  room_climate.py  timeline.py
src/ma_analyse/app/: cli.py  commands.py
src/ma_analyse/gui/: app.py  dialogs.py  selection.py
src/ma_analyse/settings/: formats.py  output_formats.md  plot_templates.py
tests/: test_cli.py  test_gui_selection.py  test_heating_year_view.py  test_logging.py  test_plot_templates.py
