[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-analyse"
version = "0.3.1"
description = "Analysepipeline fuer Simulationsdaten der Masterarbeit"
requires-python = ">=3.14"
dependencies = [
    "matplotlib",
    "openpyxl",
    "pandas",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[project.scripts]
ma-analyse = "ma_analyse.app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ma_analyse.settings" = ["*.md", "*.toml"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]


